# gridcell

./: CMakeLists.txt  README.md  run_tests.sh
src/: main.cpp
tests/: unit_tests.cfg  unit_tests.lastoutput
